--- a/layouts/index.html
+++ b/layouts/index.html
@@ -35,6 +35,7 @@
             <ul>
                 <li ><a style="text-decoration:underline" href="mailto:felixhr2000@gmail.com">Email</a></li>
                 <li ><a style="text-decoration:underline" href="https://www.linkedin.com/in/felixhaba/">LinkedIn</a></li>
+                <li ><a style="text-decoration:underline" href="https://drive.google.com/file/d/18onP_0r-Nk5hQVgQ9WqlDxNaG-E16voB/view?usp=sharing">Resume</a></li>
             </ul>
         </div>
     </div>
